# auction-backend

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: main.py
backend/api/: __init__.py  lots.py  websocket.py
backend/core/: __init__.py  conf.py
backend/db/: __init__.py  models.py  session.py
backend/schemas/: __init__.py  bid.py  lot.py
backend/services/: __init__.py  websocket_manager.py
