[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "auction-backend"
version = "0.1.0"
description = "Auction backend: lots, bids, WebSocket updates"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.133",
    "uvicorn[standard]>=0.41",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.31",
    "pydantic>=2",
    "pydantic-settings>=2",
    "python-dotenv>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
